# openteens-forum-backend

./: .env  .gitignore  README.md  app.py  dependencies.py  pyproject.toml
api/api_v1/endpoints/: user.py
configs/: __init__.py
crud/: README.txt  userModels.py
models/: README.txt  __init__.py  user.py  userModels.py
schemas/: user.py  userModels.py
